--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-requests
-plotly
-groq
-google-generativeai
-pydantic
-flask
-flask-cors
-xlsxwriter
+streamlit>=1.40.0
+plotly>=5.18.0
+xlsxwriter>=3.2.0
+groq>=0.4.0
+openai>=1.0.0
+flask>=3.0.0
+flask-cors>=4.0.0
+pydantic>=2.0.0
+
