--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,12 @@ xlsxwriter>=3.2.0
 fpdf2>=2.7.0
 groq>=0.4.0
 openai>=1.0.0
-flask>=3.0.0
-flask-cors>=4.0.0
+plotly>=5.18.0
 pydantic>=2.0.0
+fastapi>=0.115.6
+uvicorn>=0.34.0
+requests>=2.32.3
+python-multipart>=0.0.20
+
+
 
