--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,11 @@ streamlit>=1.40.0
 plotly>=5.18.0
 xlsxwriter>=3.2.0
 fpdf2>=2.7.0
+google-generativeai>=0.3.0
 groq>=0.4.0
 openai>=1.0.0
-plotly>=5.18.0
+flask>=3.0.0
+flask-cors>=4.0.0
 pydantic>=2.0.0
-fastapi>=0.115.6
-uvicorn>=0.34.0
-requests>=2.32.3
-python-multipart>=0.0.20
-flask>=3.1.0
-flask-cors>=5.0.0
-
-
-
+requests>=2.31.0
 
